--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				data-cycle-speed="1200"
 				data-cycle-timeout="16000"
 				style="height: 100%;">
-				<img style="height: 100%;" src="/images/banner/banner1.webp" alt="Slide Image 01" />
+				<img style="height: 100%;" src="images/banner/banner1.webp" alt="Slide Image 01" />
 			</div>
 			<div class="Header-text">
 				<div class="tilt-left">
@@ -128,7 +128,7 @@
 							<h3 class="Menu-title">Breakfast</h3>
 							<small class="Menu-time">(08:00 AM - 10:00 AM)</small>
 						</div>
-						<img class="Menu-image" src="/images/menu/breakfast.webp" alt="" srcset="">
+						<img class="Menu-image" src="images/menu/breakfast.webp" alt="" srcset="">
 						<ol class="Menu-list">
 							<li class="Menu-item">
 								<div class="Menu-item-container">
@@ -145,7 +145,7 @@
 							<h3 class="Menu-title">Lunch</h3>
 							<small class="Menu-time">(12:30 PM - 03:00 PM)</small>
 						</div>
-						<img class="Menu-image" src="/images/menu/lunch.webp" alt="" srcset="">
+						<img class="Menu-image" src="images/menu/lunch.webp" alt="" srcset="">
 						<ol class="Menu-list">
 							<li class="Menu-item">
 								<div class="Menu-item-container">
@@ -160,7 +160,7 @@
 							<h3 class="Menu-title">Dinner</h3>
 							<small class="Menu-time">(07:00 PM - 09:00 PM)</small>
 						</div>
-						<img class="Menu-image" src="/images/menu/dinner.webp" alt="" srcset="">
+						<img class="Menu-image" src="images/menu/dinner.webp" alt="" srcset="">
 						<ol class="Menu-list">
 							<li class="Menu-item">
 								<div class="Menu-item-container">
@@ -180,13 +180,13 @@
 						<h4 class="header-divider" style="text-transform: none;"><b>Weekly</b> and <b>Monthly</b> orders are also welcomed at a very discounted price.</h4>
 					</div>
 					<div class="wow rotateIn" data-wow-duration="2s" data-wow-offset="250">
-						<img style="border-radius: 50%;" src="/images/extra/calande.gif" alt="About Ghar Ka Khana" />
+						<img style="border-radius: 50%;" src="images/extra/calande.gif" alt="About Ghar Ka Khana" />
 					</div>
 				</div>
 			</div>		
 		</section>
 		<section class="section-container parallax bgWhite">
-			<img class="bannersImg" src="/images/banner/banner2.webp" alt="" srcset="">
+			<img class="bannersImg" src="images/banner/banner2.webp" alt="" srcset="">
 			<div class="grid-container banners">
 				<div class="grid-100 tablet-grid-100 mobile-grid-100 no-margin">
 					<div class="wow zoomIn" data-wow-duration="2s" data-wow-offset="250">
@@ -201,7 +201,7 @@
 			<div class="grid-container">
 				<div id="delivery" class="grid-50 tablet-grid-100 mobile-grid-100">
 					<div class="wow rotateIn" data-wow-duration="2s" data-wow-offset="250">
-						<img class="about-main" src="/images/extra/delivery.gif" alt="About Ghar Ka Khana" />
+						<img class="about-main" src="images/extra/delivery.gif" alt="About Ghar Ka Khana" />
 					</div>
 					<div class="wow fadeInRight" data-wow-duration="2s" data-wow-offset="250">
 						<h4 class="header-divider">Free home delivery within the range of 2 Km from the residential address.</h4>
@@ -210,7 +210,7 @@
 			</div>		
 		</section>
 		<section id="our-services" class="section-container parallax bgWhite">
-			<img class="bannersImg" src="/images/banner/banner3.webp" alt="" srcset="">
+			<img class="bannersImg" src="images/banner/banner3.webp" alt="" srcset="">
 			<div class="grid-container banners">
 				<div class="grid-100 tablet-grid-100 mobile-grid-100 no-margin">
 					<div class="wow zoomIn" data-wow-duration="2s" data-wow-offset="250">
@@ -261,7 +261,7 @@
 			</div>		
 		</section>
 		<section id="testimonials" class="section-container parallax">
-			<img class="bannersImg" src="/images/banner/banner5.webp" alt="" srcset="">
+			<img class="bannersImg" src="images/banner/banner5.webp" alt="" srcset="">
 			<div class="grid-container banners">
 				<div class="wow fadeIn" data-wow-duration="2s" data-wow-offset="250">
 					<h1 class="section-heading-alt-title">What our Customers Say<span>&hellip;</span></h1>
