--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 			<div class="grid-container">
 				<div class="footer-text">
 					<p>Ghar Ka Khana &copy; 2017. All rights reserved.</p>
-					<p>Designed by <a href="http://codebiceps.com/" target="_blank">CodeBiceps.</a></p>
+					<p>Designed by <a href="https://codebiceps.com/" target="_blank">CodeBiceps.</a></p>
 				</div>
 			</div>
 		</div>
